fixes whitespace issues

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -135,7 +135,7 @@ a:hover {
   font-size: 1.6em;
   text-align: left;
   margin-bottom: 60px;
-  white-space: pre-wrap;
+  white-space: pre-line;
 }
 
 
